--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@ header {
   overflow: hidden;
   background: #f0f0f0;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mosaic-item img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain;
   display: block;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
@@ -641,8 +644,8 @@ footer a:hover {
   }
   
   .mosaic-item {
-    aspect-ratio: 4/3;
     min-width: 0;
+    aspect-ratio: auto;
   }
   
   .mosaic-item[style*="display: none"] {
@@ -651,8 +654,8 @@ footer a:hover {
   
   .mosaic-item img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    object-fit: contain;
   }
   
   .gallery {
