--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ header {
 .mosaic-item {
   position: relative;
   overflow: hidden;
-  background: #f0f0f0;
+  background: #fff;
   cursor: pointer;
   display: flex;
   align-items: center;
