--- a/index.html
+++ b/index.html
@@ -1265,11 +1265,11 @@ function loadImage(index) {
     gestureSettingsTouch: {
       pinchToZoom: true,
       flickEnabled: true,
-      flickMomentum: 0.97,  // Increased to 0.97 - even more inertia on mobile
-      flickMinSpeed: 0.15   // Decreased to 0.15 - very easy to trigger flick
+      flickMomentum: 0.98,  // Increased to 0.98 - maximum inertia
+      flickMinSpeed: 0.12   // Decreased to 0.12 - very easy to trigger flick
     },
-    animationTime: 1.7,      // Increased to 1.7s - very smooth animations
-    springStiffness: 4.7,    // Decreased to 4.7 - very fluid
+    animationTime: 1.9,      // Increased to 1.9s - ultra smooth animations
+    springStiffness: 4.3,    // Decreased to 4.3 - maximum fluidity
     zoomPerClick: 1.4,
     zoomPerScroll: 1.08,
     immediateRender: true,
