--- a/about.html
+++ b/about.html
@@ -312,11 +312,11 @@ footer a:hover {
   
   footer {
     padding: 10px 15px;
-    font-size: 11px;
+    font-size: 14px;
   }
   
   footer a {
-    font-size: 11px;
+    font-size: 14px;
   }
 }
 </style>
@@ -409,7 +409,7 @@ footer a:hover {
 
 <footer>
   <div></div>
-  <a href="index.html">Back</a>
+  <a href="index.html" title="">Back</a>
 </footer>
 
 <script>
