--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ footer a:hover {
   
   footer {
     padding: 10px 15px;
-    font-size: 11px;
+    font-size: 14px;
     border-top: none;
     box-shadow: none;
   }
@@ -673,7 +673,7 @@ footer a:hover {
   }
   
   footer a {
-    font-size: 11px;
+    font-size: 14px;
   }
   
   .contact-btn {
@@ -835,7 +835,7 @@ footer a:hover {
 <!-- Footer -->
 <footer>
   <div></div>
-  <a href="about.html">About</a>
+  <a href="about.html" title="">About</a>
 </footer>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
