--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ footer a:hover {
   left: 0;
   right: 0;
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #ffffff;
   border-top: none;
   max-height: 300px;
   overflow-y: auto;
@@ -713,7 +713,7 @@ footer a:hover {
   .lightbox-caption p {
     font-size: 11px;
     margin: 0;
-    color: #333;
+    color: #000000;
   }
   
   /* Hide navigation controls on mobile - swipe gestures replace them */
@@ -741,7 +741,7 @@ footer a:hover {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
   "name": "Sebastian Verdon Photography",
-  "description": "Photographe spécialisé en documentation d'art contemporain pour galeries, musées et artistes en Suisse",
+  "description": "Art Documentation Photography –Sebastian Verdon",
   "url": "https://sebastianverdon.ch",
   "telephone": "",
   "email": "sv@sebastianverdon.ch",
@@ -757,7 +757,7 @@ footer a:hover {
     "longitude": "6.9299"
   },
   "priceRange": "$$",
-  "image": "https://sebastianverdon.ch/thumbs/image1.jpg",
+  "image": "https://sebastianverdon.ch/thumbs/image29.jpg",
   "founder": {
     "@type": "Person",
     "name": "Sebastian Verdon",
@@ -769,9 +769,9 @@ footer a:hover {
   },
   "serviceType": [
     "Photographie d'exposition",
-    "Documentation d'art contemporain",
-    "Photographie de galerie",
-    "Photographie de musée"
+    "Art Documentation",
+    "Exhibution shot, exhibition view",
+    "Art"
   ]
 }
 </script>
@@ -784,7 +784,7 @@ footer a:hover {
   <h1>Sebastian Verdon - Art Documentation Photography en Suisse</h1>
   
   <h2>Documentation photographique d'expositions</h2>
-  <p>Sebastian Verdon est un photographe spécialisé dans la documentation d'art contemporain pour les institutions culturelles, galeries, artistes, collectionneurs et maisons d'édition en Suisse romande.</p>
+  <p>Sebastian Verdon est un photographe spécialisé dans la documentation d'exposition d'art qu'il réalise pour des institutions culturelles, galeries, artistes, collectionneurs et maisons d'édition en Suisse romande.</p>
   
   <h3>Artistes documentés</h3>
   <p>Baker Wardlaw, Barbezat-Villetard, Benedikt Bock, Carmen D'Apollonio, Costa Vece, Denis Savary, Elise Corpataux, Fabian Boschung, Francisco Sierra, François Jaques, Jon Merz, Jorge Raka, Karim Noureldin, Lauryn Youden, Linda Voorwinde, Lou Masduraud, Maria Guta, Lauren Huret, Martin Chramosta, Mathis Gasser, Nam June Paik, Nina Rieben, Noemi Pfister, Nolan Oswald Dennis, Paloma Proudfoot, Pamela Rosenkranz, Renaud Loda, Slavs and Tatars, Tabita Rezaire, Timo Ullmann, René Müller, Urban Zellweger, Virginie Sistek, Véronique Goël, Walead Beshty, Ximena Garrido-Lecca, Yannic Joray, Youssef Limoud, Zsófia Keresztes</p>
@@ -796,7 +796,7 @@ footer a:hover {
   <p>Parallels Part 1: Astral Border, Parallels Part 2: The Commuter, Parallels Part 3: Central Heating Visions, Désordre sacré, Reverse Engineering, L'Effet de serre, Alfombra, Corniche, Never confuse shit for cioccolato, Barbara, Mehr Licht. Video in der Kunst, Klang der Erde. Keramik in der zeitgenössischen Kunst, No Center, quartz crisis, Hot Shots!, Art en plein air, Kunst am Bau</p>
   
   <h3>Services</h3>
-  <p>Photographie d'exposition, documentation d'œuvres d'art, photographie de galerie, photographie de musée, documentation artistique professionnelle, photographie d'installation, photographie d'art contemporain</p>
+  <p>Photographie d'exposition, documentation d'œuvres d'art, photographie, musée, repros</p>
   
   <p>Contact : <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f98a8fb98a9c9b988a8d9098978f9c8b9d9697d79a91">[email&#160;protected]</a></p>
 </div>
